fixed nits